# vip

./: .env.example  README.md  package-lock.json  package.json  vite.config.ts  wrangler.toml
.github/workflows/: deploy.yml
.idx/: dev.nix
scripts/: obfuscate.js  preflight.js
src/: index.tsx
src/components/: AdminDashboard.tsx  UserPanel.tsx
src/db/: queries.ts  schema.ts
src/routes/: admin.ts  vless.ts
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/utils/: analytics.ts
src/vless/: utils.ts
