[package]
name = "vless-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
uuid = { version = "1.8.0", features = ["serde", "v4", "js"] }

[profile.release]
lto = true
opt-level = "s"
